--- CHANGELOG ---

--- PyFMI-2.3.1 ---
    * Added caching of model variables when retriving the variables lists (ticket:5007)
    * Added more information about where time is spent in a simulation (ticket:4983)
    * Improved performance when using filters (ticket:4984)

--- PyFMI-2.3 ---
    * Implemented a Master algorithm for simulation of CS FMUS
                            (ticket:4918)
    * Information from the integrator to the log (ticket:4101)
    * Parameter estimation of FMUs (ticket:4461, ticket:4809)
    * Bug fixes: plot gui (ticket:4472), pyfmi without assimulo (ticket:4509)
                 handle result (ticket:4658), enum definition (ticket:4740)
                 log name (ticket:4792), enum get/set (ticket:4941)
                 malformed xml (ticket:4888)
    * Allow do steps to be performed in parallel (ticket:4541)
    * Direct acces to low-level FMIL methods (ticket:4542)
    * Performance improvements for get/set (ticket:4566)
    * Fixed output dependencies (ticket:4728, ticket:4762)
    * Fixed derivative dependencies (ticket:4729, ticket:4765)
    * Add option to use finite differences if directional derivatives are not available (ticket:4733)
    * Add support for get/set string (ticket:4798)
    * Added option to disable reloading of simulation results (ticket:4930)

--- PyFMI-2.2 ---
    * Support for sparse representation of matrices (ticket:4306)
    * Update methods for getting variable lists (ticket:4370)
    * Fix for Python 3 (ticket:4386, ticket:4470)
    * Support for get/set FMU state (ticket:4455)
    * Bug fix for result storage (ticket:4460)
    * Bug fix for simulating FMU without states (ticket:4462)
    * Exposed enter/exit initialization mode (ticket:4436)
    * Using PyFMI without Assimulo (ticket:4393)

--- PyFMI-2.1 ---
    * PyFMI Python 3 compliant (ticket:4147)
    * Fix for assert fails in CS simulation (ticket:4244)
    * Methods for retrieving dependency information (ticket:4260)